--- a/newifiD2.config
+++ b/newifiD2.config
@@ -7,107 +7,108 @@ CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_UnblockNeteaseMusic=y
 CONFIG_PACKAGE_UnblockNeteaseMusicGo=y
 CONFIG_PACKAGE_adbyby=y
+CONFIG_PACKAGE_appfilter=y
 CONFIG_PACKAGE_boost=y
 CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_ca-bundle=y
-# CONFIG_PACKAGE_etherwake is not set
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipt2socks=y
+CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_kcptun-client=y
 CONFIG_PACKAGE_kmod-fast-classifier=y
+CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
+CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
-# CONFIG_PACKAGE_kmod-ipt-offload is not set
 CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
-# CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
-# CONFIG_PACKAGE_kmod-nf-flow is not set
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
+CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_kmod-shortcut-fe=y
 CONFIG_PACKAGE_kmod-sit=y
+CONFIG_PACKAGE_kmod-udptunnel4=y
+CONFIG_PACKAGE_kmod-udptunnel6=y
 CONFIG_PACKAGE_kmod-usb-printer=y
+CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcares=y
 CONFIG_PACKAGE_libev=y
+CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libhttp-parser=y
 CONFIG_PACKAGE_libmbedtls=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_libnghttp2=y
+CONFIG_PACKAGE_libnss=y
 CONFIG_PACKAGE_libsodium=y
+CONFIG_PACKAGE_libsqlite3=y
 CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_libubox-lua=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
-# CONFIG_PACKAGE_luci-app-accesscontrol is not set
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
-# CONFIG_PACKAGE_luci-app-arpbind is not set
-# CONFIG_PACKAGE_luci-app-autoreboot is not set
-# CONFIG_PACKAGE_luci-app-flowoffload is not set
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
-# CONFIG_PACKAGE_luci-app-mtwifi is not set
+CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-nft-qos=y
-# CONFIG_PACKAGE_luci-app-nlbwmon is not set
-# CONFIG_PACKAGE_luci-app-ramfree is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
+CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-sfe=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
-# CONFIG_PACKAGE_luci-app-vsftpd is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ChinaDNS is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Kcptun is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ShadowsocksR_Server is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ShadowsocksR_Socks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks_Server is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks_Socks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Trojan is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_V2ray is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_dnscrypt_proxy is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_dnsforwarder is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ipt2socks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_privoxy is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_simple-obfs is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_simple-obfs-server is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_udp2raw-tunnel is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_udpspeeder is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_v2ray-plugin is not set
-# CONFIG_PACKAGE_luci-app-wol is not set
+CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-nft-qos-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-oaf-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-sfe-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
-# CONFIG_PACKAGE_mt_wifi is not set
+CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_luci-theme-opentomcat=y
+CONFIG_PACKAGE_mwan3=y
+CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_nft-qos=y
 CONFIG_PACKAGE_nftables-nojson=y
-# CONFIG_PACKAGE_nlbwmon is not set
 CONFIG_PACKAGE_node=y
+CONFIG_PACKAGE_nspr=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_p910nd=y
+CONFIG_PACKAGE_redsocks2=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
+CONFIG_PACKAGE_shadowsocksr-libev-server=y
 CONFIG_PACKAGE_simple-obfs=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_v2ray-plugin=y
-# CONFIG_PACKAGE_vsftpd-alt is not set
-# CONFIG_PACKAGE_wireless-tools is not set
-# CONFIG_PACKAGE_wol is not set
+CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_xray-core=y
+CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
+CONFIG_SQLITE3_FTS3=y
+CONFIG_SQLITE3_FTS4=y
+CONFIG_SQLITE3_FTS5=y
+CONFIG_SQLITE3_JSON1=y
+CONFIG_SQLITE3_RTREE=y
 CONFIG_UnblockNeteaseMusic_Go=y
 CONFIG_UnblockNeteaseMusic_NodeJS=y
 CONFIG_XRAY_CORE_COMPRESS_UPX=y
