--- a/newifiD2.config
+++ b/newifiD2.config
@@ -1,9 +1,85 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
+CONFIG_DRIVER_11AC_SUPPORT=y
+CONFIG_DRIVER_11N_SUPPORT=y
+CONFIG_DRIVER_11W_SUPPORT=y
+CONFIG_LIBCURL_COOKIES=y
+CONFIG_LIBCURL_FILE=y
+CONFIG_LIBCURL_FTP=y
+CONFIG_LIBCURL_HTTP=y
+CONFIG_LIBCURL_MBEDTLS=y
+CONFIG_LIBCURL_NO_SMB="!"
+CONFIG_LIBCURL_PROXY=y
 CONFIG_LIBSODIUM_MINIMAL=y
+CONFIG_MTK_APCLI_SUPPORT=y
+CONFIG_MTK_ATE_SUPPORT=y
+CONFIG_MTK_BACKGROUND_SCAN_SUPPORT=y
+CONFIG_MTK_BAND_STEERING=y
+CONFIG_MTK_BRCM_256QAM_SUPPORT=y
+CONFIG_MTK_CHIP_MT7615E=y
+CONFIG_MTK_DBDC_MODE=y
+CONFIG_MTK_DOT11W_PMF_SUPPORT=y
+CONFIG_MTK_DOT11_N_SUPPORT=y
+CONFIG_MTK_DOT11_VHT_AC=y
+CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
+CONFIG_MTK_FIRST_IF_IPAILNA=y
+CONFIG_MTK_FIRST_IF_MT7615E=y
+CONFIG_MTK_G_BAND_256QAM_SUPPORT=y
+CONFIG_MTK_HDR_TRANS_RX_SUPPORT=y
+CONFIG_MTK_HDR_TRANS_TX_SUPPORT=y
+CONFIG_MTK_ICAP_SUPPORT=y
+CONFIG_MTK_IGMP_SNOOP_SUPPORT=y
+CONFIG_MTK_LED_CONTROL_SUPPORT=y
+CONFIG_MTK_LINUX_NET_TXQ_SUPPORT=y
+CONFIG_MTK_MAC_REPEATER_SUPPORT=y
+CONFIG_MTK_MBSS_SUPPORT=y
+CONFIG_MTK_MCAST_RATE_SPECIFIC=y
+CONFIG_MTK_MT_AP_SUPPORT=y
+CONFIG_MTK_MT_DFS_SUPPORT=y
+CONFIG_MTK_MT_MAC=y
+CONFIG_MTK_MT_WIFI=y
+CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
+CONFIG_MTK_MULTI_INF_SUPPORT=y
+CONFIG_MTK_MULTI_PROFILE_SUPPORT=y
+CONFIG_MTK_MUMIMO_SUPPORT=y
+CONFIG_MTK_MU_RA_SUPPORT=y
+CONFIG_MTK_PCIE_ASPM_DYM_CTRL_SUPPORT=y
+CONFIG_MTK_PRE_CAL_TRX_SET1_SUPPORT=y
+CONFIG_MTK_PRE_CAL_TRX_SET2_SUPPORT=y
+CONFIG_MTK_RED_SUPPORT=y
+CONFIG_MTK_RLM_CAL_CACHE_SUPPORT=y
+CONFIG_MTK_RTMP_FLASH_SUPPORT=y
+CONFIG_MTK_RT_FIRST_CARD=7615
+CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
+CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
+CONFIG_MTK_RT_SECOND_CARD=7615
+CONFIG_MTK_RT_SECOND_CARD_EEPROM="flash"
+CONFIG_MTK_RT_SECOND_IF_RF_OFFSET=0xc8000
+CONFIG_MTK_SECOND_IF_EEPROM_FLASH=y
+CONFIG_MTK_SECOND_IF_IPAILNA=y
+CONFIG_MTK_SECOND_IF_MT7615E=y
+CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
+CONFIG_MTK_SPECTRUM_SUPPORT=y
+CONFIG_MTK_SUPPORT_OPENWRT=y
+CONFIG_MTK_TCP_RACK_SUPPORT=y
+CONFIG_MTK_THIRD_IF_NONE=y
+CONFIG_MTK_TPC_SUPPORT=y
+CONFIG_MTK_TXBF_SUPPORT=y
+CONFIG_MTK_UAPSD=y
+CONFIG_MTK_VHT_TXBF_2G_EPIGRAM_IE_SUPPORT=y
+CONFIG_MTK_VOW_SUPPORT=y
+CONFIG_MTK_WDS_SUPPORT=y
+CONFIG_MTK_WIFI_BASIC_FUNC=y
+CONFIG_MTK_WIFI_DRIVER=y
+CONFIG_MTK_WIFI_MODE_AP=y
+CONFIG_MTK_WIFI_MT_MAC=y
+CONFIG_MTK_WSC_INCLUDED=y
+CONFIG_MTK_WSC_V2_SUPPORT=y
 CONFIG_NODEJS_ICU_NONE=y
 CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_MAC80211_DEBUGFS=y
+CONFIG_PACKAGE_MAC80211_MESH=y
 CONFIG_PACKAGE_UnblockNeteaseMusic=y
 CONFIG_PACKAGE_UnblockNeteaseMusicGo=y
 CONFIG_PACKAGE_adbyby=y
@@ -13,18 +89,43 @@ CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_eapol-test=y
+# CONFIG_PACKAGE_etherwake is not set
+CONFIG_PACKAGE_hostapd=y
+CONFIG_PACKAGE_hostapd-common=y
+CONFIG_PACKAGE_hostapd-utils=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_kcptun-client=y
+CONFIG_PACKAGE_kmod-cfg80211=y
 CONFIG_PACKAGE_kmod-fast-classifier=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
+# CONFIG_PACKAGE_kmod-ipt-offload is not set
 CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
+CONFIG_PACKAGE_kmod-mac80211=y
+CONFIG_PACKAGE_kmod-mt76=y
+CONFIG_PACKAGE_kmod-mt76-core=y
+CONFIG_PACKAGE_kmod-mt7603=y
+# CONFIG_PACKAGE_kmod-mt7603e is not set
+CONFIG_PACKAGE_kmod-mt7615-common=y
+CONFIG_PACKAGE_kmod-mt7615-firmware=y
+CONFIG_PACKAGE_kmod-mt7615d=y
+CONFIG_PACKAGE_kmod-mt7615d_dbdc=y
+CONFIG_PACKAGE_kmod-mt7615e=y
+CONFIG_PACKAGE_kmod-mt76x02-common=y
+CONFIG_PACKAGE_kmod-mt76x2=y
+CONFIG_PACKAGE_kmod-mt76x2-common=y
+# CONFIG_PACKAGE_kmod-mt76x2e is not set
+# CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
+# CONFIG_PACKAGE_kmod-nf-flow is not set
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-nft-core=y
@@ -39,6 +140,7 @@ CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcares=y
+CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libhttp-parser=y
@@ -52,12 +154,21 @@ CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libubox-lua=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
+# CONFIG_PACKAGE_luci-app-accesscontrol is not set
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
+# CONFIG_PACKAGE_luci-app-arpbind is not set
+# CONFIG_PACKAGE_luci-app-autoreboot is not set
+# CONFIG_PACKAGE_luci-app-flowoffload is not set
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-nft-qos=y
+# CONFIG_PACKAGE_luci-app-nlbwmon is not set
 CONFIG_PACKAGE_luci-app-oaf=y
+# CONFIG_PACKAGE_luci-app-ramfree is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
 CONFIG_PACKAGE_luci-app-sfe=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
@@ -69,7 +180,27 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
+# CONFIG_PACKAGE_luci-app-vsftpd is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ChinaDNS is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Kcptun is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ShadowsocksR_Server is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ShadowsocksR_Socks is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks_Server is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks_Socks is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Trojan is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_V2ray is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_dnscrypt_proxy is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_dnsforwarder is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ipt2socks is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_privoxy is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_simple-obfs is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_simple-obfs-server is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_udp2raw-tunnel is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_udpspeeder is not set
+# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_v2ray-plugin is not set
 CONFIG_PACKAGE_luci-app-wireguard=y
+# CONFIG_PACKAGE_luci-app-wol is not set
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
@@ -82,10 +213,13 @@ CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-theme-opentomcat=y
+CONFIG_PACKAGE_maccalc=y
+# CONFIG_PACKAGE_mt_wifi is not set
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_nft-qos=y
 CONFIG_PACKAGE_nftables-nojson=y
+# CONFIG_PACKAGE_nlbwmon is not set
 CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_nspr=y
 CONFIG_PACKAGE_odhcp6c=y
@@ -101,7 +235,13 @@ CONFIG_PACKAGE_simple-obfs=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_v2ray-plugin=y
+# CONFIG_PACKAGE_vsftpd-alt is not set
 CONFIG_PACKAGE_wireguard-tools=y
+CONFIG_PACKAGE_wireless-regdb=y
+# CONFIG_PACKAGE_wireless-tools is not set
+# CONFIG_PACKAGE_wol is not set
+CONFIG_PACKAGE_wpa-cli=y
+CONFIG_PACKAGE_wpa-supplicant=y
 CONFIG_PACKAGE_xray-core=y
 CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
 CONFIG_SQLITE3_FTS3=y
@@ -111,11 +251,12 @@ CONFIG_SQLITE3_JSON1=y
 CONFIG_SQLITE3_RTREE=y
 CONFIG_UnblockNeteaseMusic_Go=y
 CONFIG_UnblockNeteaseMusic_NodeJS=y
+CONFIG_WPA_ENABLE_WEP=y
+CONFIG_WPA_MSG_MIN_PRIORITY=3
+CONFIG_WPA_RFKILL_SUPPORT=y
 CONFIG_XRAY_CORE_COMPRESS_UPX=y
 CONFIG_XRAY_CORE_PROVIDE_V2RAY_CORE=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
-CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_libelf=y
