--- a/.github/workflows/diy.yml
+++ b/.github/workflows/diy.yml
@@ -21,7 +21,10 @@ jobs:
         git clone https://github.com/coolsnowwolf/lede
         cd lede
     - name: 定制固件
+      env:
+        CONFIG_FILE: "${{ github.event.inputs.config }}"
       run: |
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./diy.sh && ./diy.sh
     - name: 开始编译固件
       working-directory: ./lede
