--- a/test.config
+++ b/test.config
@@ -1,41 +1,71 @@
-CONFIG_TARGET_ramips=y
-CONFIG_TARGET_ramips_mt7620=y
-CONFIG_TARGET_ramips_mt7620_DEVICE_xiaomi_miwifi-mini=y
-CONFIG_PACKAGE_avahi-autoipd=y
-CONFIG_PACKAGE_avahi-dbus-daemon=y
-CONFIG_PACKAGE_avahi-dnsconfd=y
-CONFIG_PACKAGE_cups=y
-CONFIG_PACKAGE_cups-bjnp=y
-CONFIG_PACKAGE_cups-bsd=y
-CONFIG_PACKAGE_cups-client=y
-CONFIG_PACKAGE_cups-ppdc=y
-CONFIG_PACKAGE_dbus=y
-CONFIG_PACKAGE_fontconfig=y
-CONFIG_PACKAGE_glib2=y
-CONFIG_PACKAGE_gutenprint-cups=y
+# CONFIG_PACKAGE_base-files is not set
+# CONFIG_PACKAGE_block-mount is not set
+# CONFIG_PACKAGE_busybox is not set
+# CONFIG_PACKAGE_ca-certificates is not set
+# CONFIG_PACKAGE_chinadns-ng is not set
+# CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
+# CONFIG_PACKAGE_dnsmasq_full_tftp is not set
+# CONFIG_PACKAGE_dropbear is not set
+# CONFIG_PACKAGE_etherwake is not set
+# CONFIG_PACKAGE_fstools is not set
+# CONFIG_PACKAGE_fwtool is not set
+# CONFIG_PACKAGE_getrandom is not set
+# CONFIG_PACKAGE_jshn is not set
+# CONFIG_PACKAGE_jsonfilter is not set
+# CONFIG_PACKAGE_kmod-ipt-offload is not set
+# CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
+# CONFIG_PACKAGE_kmod-nf-flow is not set
+# CONFIG_PACKAGE_kmod-tcp-bbr is not set
 CONFIG_PACKAGE_kmod-usb-printer=y
-CONFIG_PACKAGE_lcms2=y
-CONFIG_PACKAGE_libatomic=y
-CONFIG_PACKAGE_libattr=y
-CONFIG_PACKAGE_libavahi-client=y
-CONFIG_PACKAGE_libavahi-dbus-support=y
-CONFIG_PACKAGE_libcups=y
-CONFIG_PACKAGE_libcupscgi=y
-CONFIG_PACKAGE_libcupsimage=y
-CONFIG_PACKAGE_libcupsmime=y
-CONFIG_PACKAGE_libcupsppdc=y
-CONFIG_PACKAGE_libdaemon=y
-CONFIG_PACKAGE_libdbus=y
-CONFIG_PACKAGE_libexpat=y
-CONFIG_PACKAGE_libffi=y
-CONFIG_PACKAGE_libfreetype=y
-CONFIG_PACKAGE_libijs=y
-CONFIG_PACKAGE_libjpeg-turbo=y
-CONFIG_PACKAGE_libpcre2=y
-CONFIG_PACKAGE_libpng=y
-CONFIG_PACKAGE_libstdcpp=y
-CONFIG_PACKAGE_libtiff=y
-CONFIG_PACKAGE_libusb-1.0=y
-CONFIG_PACKAGE_openprinting-cups-filters=y
-CONFIG_PACKAGE_poppler=y
-CONFIG_PACKAGE_qpdf=y
+# CONFIG_PACKAGE_libmbedtls is not set
+# CONFIG_PACKAGE_logd is not set
+# CONFIG_PACKAGE_luci-app-accesscontrol is not set
+# CONFIG_PACKAGE_luci-app-arpbind is not set
+# CONFIG_PACKAGE_luci-app-autoreboot is not set
+# CONFIG_PACKAGE_luci-app-ddns is not set
+# CONFIG_PACKAGE_luci-app-filetransfer is not set
+# CONFIG_PACKAGE_luci-app-nlbwmon is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NONE_V2RAY is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client is not set
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Client=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs is not set
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
+# CONFIG_PACKAGE_luci-app-turboacc is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_PDNSD is not set
+CONFIG_PACKAGE_luci-app-usb-printer=y
+# CONFIG_PACKAGE_luci-app-vlmcsd is not set
+# CONFIG_PACKAGE_luci-app-vsftpd is not set
+# CONFIG_PACKAGE_luci-app-wol is not set
+CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
+# CONFIG_PACKAGE_luci-lib-fs is not set
+# CONFIG_PACKAGE_mtd is not set
+# CONFIG_PACKAGE_netifd is not set
+# CONFIG_PACKAGE_nlbwmon is not set
+# CONFIG_PACKAGE_openwrt-keyring is not set
+# CONFIG_PACKAGE_opkg is not set
+CONFIG_PACKAGE_p910nd=y
+# CONFIG_PACKAGE_pdnsd-alt is not set
+# CONFIG_PACKAGE_procd is not set
+# CONFIG_PACKAGE_shadowsocks-libev-ss-local is not set
+# CONFIG_PACKAGE_shadowsocks-libev-ss-redir is not set
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-local is not set
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir is not set
+# CONFIG_PACKAGE_simple-obfs-client is not set
+# CONFIG_PACKAGE_swconfig is not set
+# CONFIG_PACKAGE_ubi-utils is not set
+# CONFIG_PACKAGE_ubox is not set
+# CONFIG_PACKAGE_ubus is not set
+# CONFIG_PACKAGE_ubusd is not set
+# CONFIG_PACKAGE_uci is not set
+# CONFIG_PACKAGE_urandom-seed is not set
+# CONFIG_PACKAGE_urngd is not set
+# CONFIG_PACKAGE_usign is not set
+CONFIG_PACKAGE_v2ray-core=y
+# CONFIG_PACKAGE_vlmcsd is not set
+# CONFIG_PACKAGE_vsftpd-alt is not set
+# CONFIG_PACKAGE_wol is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM is not set
